--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,18 +1,31 @@
+// if device is less than or equal to 425px then do...
+
 
 @mixin for-phone-only{
   @media (max-width: 425px) {@content;}
 }
+// if device is less than or equal to 425px then do...
+
+
 @mixin for-tablet-portait-up{
-  @media (min-width:768px) {@content;}
+  @media (max-width:768px) {@content;}
 }
+// if device is less than or equal to 768px then do...
+
+
 @mixin for-tablet-landscape-up{
-  @media (min-width:900px) {@content;}
+  @media (max-width:900px) {@content;}
 }
+// if device is less than or equal to 900px then do...
+
 @mixin for-desktop{
-  @media (min-width: 1024px) {@content;}
+  @media (max-width: 1024px) {@content;}
 }
+// if device is less than or equal to 1024px then do...
+
+
 @mixin for-hd-desktop{
-  @media (max-width: 1400px) {@content;}
+  @media (min-width: 1400px) {@content;}
 }
 
 
@@ -21,30 +34,4 @@
 	@media only screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 		background-image: url($file + "@2x." + $type);
 	}
-}
-
-
-@mixin background-image-retina($file, $type, $width, $height) {
-  background-image: url($file + '.' + $type);
-  @media (-webkit-min-device-pixel-ratio: 2) {
-    & {
-      background-image: url($file + '@2x.' + $type);
-      -webkit-background-size: $width $height;
-    }
-  }
-}
-
-@mixin background-2x($path, $ext: "png", $w: auto, $h: auto, $pos: left top, $repeat: no-repeat) {
-  $at1x_path: "#{$path}.#{$ext}";
-  $at2x_path: "#{$path}@2x.#{$ext}";
-  background-image: url("#{$at1x_path}");
-  background-size: $w $h;
-  background-position: $pos;
-  background-repeat: $repeat;
-  @media all and (-webkit-min-device-pixel-ratio : 1.5),
-  all and (-o-min-device-pixel-ratio: 3/2),
-  all and (min--moz-device-pixel-ratio: 1.5),
-  all and (min-device-pixel-ratio: 1.5) {
-    background-image: url("#{$at2x_path}");
-  }
 }
