cleans media queries on swish page // deletes illustration page

--- a/scss/_illustrations.scss
+++ b/scss/_illustrations.scss
@@ -1,225 +1,7 @@
 @import 'colours';
 @import 'mixins';
 @import 'typography';
+@import 'projects';
 @import 'layout';
 
 //----- Illustrations Grid ---- //
-
-
-section.illustration-grid{
-  display:grid;
-  margin: 7em 0 4em 0;
-  max-width: 1400px;
-  grid-gap: 40px;
-  grid-template-columns:1fr 1fr;
-  grid-template-rows: 120px 800px 600px 800px 600px 800px 800px 500px 500px;
-  justify-items: stretch;
-  align-items: stretch;
-  grid-template-areas:
-  "cs_header cs_header"
-  "splash splash"
-  "idtheft_grid1 esports_grid1"
-  "idtheft_grid2 esports_grid1"
-  "esports_grid2 esports_grid3"
-  "legup_grid legup_grid"
-  "editorial_grid editorial_grid"
-  "password_grid1 password_grid2"
-  "password_grid3 password_grid4";
-  @include for-phone-only{
-    margin: 4em 0 4em 0;
-    grid-row-gap: 20px;
-    grid-column-gap: 0px;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas:
-    "cs_header"
-    "splash"
-    "idtheft_grid1"
-    "idtheft_grid2"
-    "esports_grid1"
-    "esports_grid2"
-    "esports-grid3"
-    "legup_grid"
-    "editorial_grid"
-    "password_grid1"
-    "password_grid2"
-    "password_grid3"
-    "password_grid4";
-
-    }
-  @include for-tablet-portait-up{
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap:20px;
-    grid-template-areas:
-    "cs_header cs_header"
-    "splash splash"
-    "idtheft_grid1 idtheft_grid1"
-    "idtheft_grid2 idtheft_grid2"
-    "esports_grid1 esports_grid1"
-    "esports_grid2 esports_grid2"
-    "esports-grid3 esports-grid3"
-    "legup_grid legup_grid"
-    "editorial_grid editorial_grid"
-    "password_grid1 password_grid1"
-    "password_grid2 password_grid2"
-    "password_grid3 password_grid3"
-    "password_grid4 password_grid4";
-  }
-  @include for-tablet-landscape-up{
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 40px;
-    grid-template-rows: 300px 500px 300px 300px 400px 600px 600px 300px 300px;
-  }
-
-  @include for-hd-desktop{
-    margin: 10em 2.5em 4em 2.5em;
-  }
-
-
-    //--Illustration backgrounds & Images--//
-    article.illustration-splash{
-    background-image: url(../img/illustrations/illustration-splash@2x.png);
-    background-size: 50%;
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    max-width:1440px;
-    background-color: $illustration-splash;
-    @include for-phone-only{
-      background-size: 80%;
-      max-height: 200px;
-    }
-    }
-
-    article.idtheft1{
-    background-image: url(../img/illustrations/idtheft-guy.png);
-    background-size: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: $illustration-pink;
-    }
-
-    article.idtheft2{
-    background-image: url(../img/illustrations/idtheft-girl.png);
-    background-size: 60%;
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: $illustration-blue;
-    }
-    article.esports1{
-    background-image: url(../img/illustrations/esports-1.png);
-    background-size: 70%;
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-color: $illustration-navy;
-    @include for-phone-only{
-      background-size: 80%;
-    }
-    }
-    article.esports2{
-    background-size: 50%;
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-color: $illustration-navy;
-    @include for-phone-only{
-      background-size: 80%;
-    }
-    }
-    article.esports-bk1{
-    background-image: url(../img/illustrations/esports-2.png);
-    }
-    article.esports-bk2{
-    background-image:url(../img/illustrations/esports-3.png);
-    }
-
-
-    article.legup{
-    background-image: url(../img/illustrations/legup.png);
-    background-size: 60%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: $illustration-blue;
-    }
-    article.editorial{
-    background-image: url(../img/illustrations/editorial.png);
-    background-size: 90%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: $illustration-salmon;
-    @include for-phone-only{
-      background-size: 80%;
-      max-height: 500px;
-    }
-    }
-    article.password{
-    background-color: $password-blue;
-    }
-
-    article.password-bk1{
-      background-size: 60%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-image: url(../img/illustrations/password1.png);
-    }
-    article.password-bk2{
-      background-size: 60%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-image: url(../img/illustrations/password2.png);
-    }
-    article.password-bk3{
-      background-size: 60%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-image: url(../img/illustrations/password3.png);
-    }
-    article.password-bk4{
-      background-size: 40%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-image: url(../img/illustrations/password4.png);
-    }
-
-//--Illustration Grid Areas--//
-article.cs-header-grid{
-  grid-area:cs_header;
-}
-article.splash{
-  grid-area:splash;
-}
-article.idtheft-grid1{
-  grid-area:idtheft_grid1;
-}
-article.idtheft-grid2{
-  grid-area:idtheft_grid2;
-}
-article.esports-grid1{
-  grid-area:esports_grid1;
-}
-article.esports-grid2{
-  grid-area:esports_grid2;
-}
-article.esports-grid3{
-  grid-area:esports_grid3;
-}
-article.esports-grid4{
-  grid-area:esports_grid4;
-}
-article.legup-grid{
-  grid-area:legup_grid;
-}
-article.editorial-grid{
-  grid-area:editorial_grid;
-}
-article.password-grid1{
-  grid-area:password_grid1;
-}
-article.password-grid2{
-  grid-area:password_grid2;
-}
-article.password-grid3{
-  grid-area:password_grid3;
-}
-article.password-grid4{
-  grid-area:password_grid4;
-}
-}
