update on illustration page

--- a/css/master.css
+++ b/css/master.css
@@ -1432,6 +1432,90 @@ article.footer {
     .scroll-to-top-link {
       display: block; } }
 
+section.illustration-idtheft {
+  border-top: 2px solid #232431;
+  padding-top: 2em;
+  margin: 7em 0 1em 0;
+  width: 100%;
+  height: 900px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 25px; }
+  section.illustration-idtheft .idtheft-1 {
+    background-color: #FBB932;
+    grid-column: 2/4; }
+  section.illustration-idtheft .idtheft-2 {
+    background-color: #FBB932;
+    grid-column: 2/3; }
+  section.illustration-idtheft .idtheft-3 {
+    background-color: #FBB932;
+    grid-column: 3/3; }
+
+section.illustration-esports {
+  border-top: 2px solid #232431;
+  margin: 3em 0 1em 0;
+  display: grid;
+  height: 1400px;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 150px repeat(2, 400px);
+  grid-gap: 25px 25px; }
+  section.illustration-esports .esports-1 {
+    background-color: #080150; }
+  section.illustration-esports .esports-2 {
+    background-color: #080150; }
+  section.illustration-esports .esports-3 {
+    background-color: #080150; }
+  section.illustration-esports .esports-4 {
+    background-color: #080150; }
+  section.illustration-esports .esports-5 {
+    background-color: #080150; }
+  section.illustration-esports .esports-6 {
+    background-color: #080150; }
+
+section.illustration-legup {
+  border-top: 2px solid #232431;
+  margin: 3em 0 1em 0;
+  display: grid;
+  height: 1000px;
+  width: 100%;
+  grid-template-columns: 1fr;
+  grid-template-rows: 150px 800px;
+  grid-row-gap: 25px; }
+  section.illustration-legup .legup {
+    background-color: #F2FAFF; }
+
+section.illustration-editorial {
+  border-top: 2px solid #232431;
+  margin: 3em 0 1em 0;
+  display: grid;
+  height: 1000px;
+  width: 100%;
+  grid-template-columns: 1fr;
+  grid-template-rows: 150px 800px;
+  grid-row-gap: 25px; }
+  section.illustration-editorial .editorial {
+    background-color: #FDE9E9; }
+
+section.illustration-1password {
+  border-top: 2px solid #232431;
+  margin: 3em 0 1em 0;
+  display: grid;
+  height: 1400px;
+  width: 100%;
+  grid-template-columns: 2fr;
+  grid-template-rows: 150px repeat(2, 400px);
+  grid-row-gap: 25px; }
+  section.illustration-1password .agile1 {
+    background-color: #F2FAFF; }
+  section.illustration-1password .agile2 {
+    background-color: #F2FAFF; }
+  section.illustration-1password .agile3 {
+    background-color: #F2FAFF; }
+  section.illustration-1password .agile4 {
+    background-color: #F2FAFF; }
+
 body {
   font-family: 'Inter UI', sans-serif; }
 
