--- a/scss/_illustrations.scss
+++ b/scss/_illustrations.scss
@@ -8,45 +8,109 @@
 
 
 section.illustration-splash{
+margin: 7em 0 2em 0;
+display: grid;
+grid-template-columns: 3fr 1fr;
+width: 100%;
+@include for-tablet-portait-up{
+  width: 95%;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 100px);
 
+}
+.illustration-title{}
+.illustration-summary{}
 }
 
 section.illustration-idtheft{
+  padding-top: 2em;
   border-top: 2px solid $default-text;
   padding-top: 2em;
-  margin: 7em 0 1em 0;
+  margin: 1em 0 1em 0;
   width: 100%;
   height:900px;
   display:grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 25px;
+  @include for-tablet-portait-up{
+    width: 95%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 120px 500px repeat(2, 300px);
+    height:1400px;
+  }
+  @include for-desktop{
+    height:1000px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 150px 500px 300px;
+  }
+
     .illustration-overview{}
     .idtheft-1{
       background-color: $illustration-splash;
       grid-column: 2/4;
+      @include for-tablet-portait-up{
+        grid-column: 1/2;
+      }
+      @include for-desktop{
+        grid-column: 1/3;
+      }
     }
     .idtheft-2{
       background-color: $illustration-splash;
       grid-column: 2/3;
+      @include for-tablet-portait-up{
+        grid-column: 1/2;
+      }
+      @include for-desktop{
+        grid-column: 1/2;
+      }
     }
     .idtheft-3{
       background-color: $illustration-splash;
       grid-column: 3/3;
+      @include for-tablet-portait-up{
+        grid-column: 1/2;
+      }
+      @include for-desktop{
+        grid-column: 2/3;
+      }
     }
 }
 
 
 section.illustration-esports{
+  padding-top: 2em;
   border-top: 2px solid $default-text;
   margin: 3em 0 1em 0;
   display: grid;
   height: 1400px;
   width:100%;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 150px repeat(2, 400px);
+  grid-template-rows: 120px repeat(2, 600px);
   grid-gap: 25px 25px;
-  .illustration-overview{}
+  @include for-tablet-portait-up{
+  width:95%;
+  grid-template-columns: 1fr;
+  grid-template-rows: 120px repeat(6, 400px);
+  height:2000px;
+  }
+  @include for-desktop{
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 120px repeat(3, 400px);
+  height:1500px;
+  }
+  .illustration-overview{
+
+    grid-column: 1/4;
+
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
+    @include for-desktop{
+      grid-column: 1/3;
+    }
+  }
   .esports-1{
     background-color: $illustration-navy;
   }
@@ -70,14 +134,20 @@ section.illustration-esports{
 
 
 section.illustration-legup{
+  padding-top: 2em;
   border-top: 2px solid $default-text;
   margin: 3em 0 1em 0;
   display:grid;
   height:1000px;
   width:100%;
   grid-template-columns: 1fr;
-  grid-template-rows: 150px 800px;
+  grid-template-rows: 120px 800px;
   grid-row-gap: 25px;
+  @include for-tablet-portait-up{
+    width: 95%;
+    grid-template-rows:120px 450px;
+    height: 650px;
+  }
   .illustration-overview{}
   .legup{
     background-color: $illustration-blue;
@@ -86,14 +156,21 @@ section.illustration-legup{
 
 
 section.illustration-editorial{
+  padding-top: 2em;
   border-top: 2px solid $default-text;
   margin: 3em 0 1em 0;
   display:grid;
   height: 1000px;
   width: 100%;
   grid-template-columns: 1fr;
-  grid-template-rows: 150px 800px;
+  grid-template-rows: 120px 800px;
   grid-row-gap: 25px;
+  @include for-tablet-portait-up{
+    width: 95%;
+    grid-template-rows:120px 450px;
+    height: 650px;
+  }
+
   .illustration-overview{}
   .editorial{
     background-color: $illustration-salmon;
@@ -102,26 +179,41 @@ section.illustration-editorial{
 
 
 section.illustration-1password{
+  padding-top: 2em;
   border-top: 2px solid $default-text;
   margin: 3em 0 1em 0;
   display:grid;
   height: 1400px;
   width: 100%;
-  grid-template-columns: 2fr;
-  grid-template-rows: 150px repeat(2, 400px);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 120px repeat(2, 500px);
   grid-row-gap: 25px;
-  .illustration-overview{}
+  grid-column-gap: 25px;
+  @include for-tablet-portait-up{
+    width: 95%;
+    grid-template-columns:1fr;
+    grid-template-rows: 120px repeat(4, 500px);
+    height:2300px;
+
+  }
+  .illustration-overview{
+    grid-column: 1/3;
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
+  }
   .agile1{
-    background-color:$illustration-blue;
+    background-color:$password-blue;
+
   }
   .agile2{
-    background-color:$illustration-blue;
+    background-color:$password-blue;
   }
   .agile3{
-    background-color:$illustration-blue;
+    background-color:$password-blue;
   }
   .agile4{
-    background-color:$illustration-blue;
+    background-color:$password-blue;
   }
 
 }
