--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -72,6 +72,13 @@ h4{
   color: $background-grey;
   -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: $default-text;
+ @include for-tablet-portait-up{
+   font-size: 70px;
+   -webkit-text-stroke-width: 1px;
+ }
+ @include for-phone-only{
+   font-size: 55px;
+ }
 }
 
 // Subhead //
@@ -102,7 +109,10 @@ h3{
   font-size:64px;
   font-weight:lighter;
   @include for-tablet-portait-up{
-    font-size: 54px;
+    font-size: 50px;
+  }
+  @include for-phone-only{
+    font-size: 40px;
   }
 }
 
