--- a/css/master.css
+++ b/css/master.css
@@ -3752,9 +3752,22 @@ section.bio {
     grid-column-start: 3;
     grid-column-end: 5; }
   section.bio .info-tools {
+    display: grid;
+    grid-template: 1fr 6fr/repeat(2, 1fr);
     grid-column-start: 3;
     grid-column-end: 4; }
+    section.bio .info-tools .tools-title {
+      grid-column: 1/3;
+      border: 1px solid red; }
+    section.bio .info-tools .tools1 {
+      grid-column: 1/2;
+      border: 1px solid red; }
+    section.bio .info-tools .tools2 {
+      grid-column: 2/3;
+      border: 1px solid red; }
   section.bio .info-expertise {
+    display: grid;
+    grid-template: 1fr 6fr/ 1fr;
     grid-column-start: 4;
     grid-column-end: 5; }
 
