cleans info and type

--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -7,6 +7,7 @@ $link-active:#0011FF;
 $link-hover:#FF3769;
 $white:#FFFFFF;
 $place-holder: #EBEBEB;
+$list-grey: #C3C3C3;
 
 //----Project Colours---//
 
