changes projects page

--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -13,8 +13,8 @@ $list-grey: #C3C3C3;
 
 $milya:#422FFA;
 $swish:#383838;
-$posters:#F0F0F0;
-
+$posters:#EBEBEB;
+$swish-background: #232431;
 
 //---Illustration Colours---//
 
