--- a/css/master.css
+++ b/css/master.css
@@ -720,102 +720,39 @@ article.footer {
     .scroll-to-top-link {
       display: block; } }
 
-.project-grid {
-  margin: 4em 0 4em 0;
-  width: 1400px;
-  max-width: 1400px;
+section.project-grid {
+  margin: 0em 0 2em 0;
+  width: 100%;
+  height: 1600px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-row-gap: 25px;
-  grid-column-gap: 20px; }
-  @media (max-width: 425px) {
-    .project-grid {
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 640px repeat(2, 400px);
+  grid-gap: 25px; }
   @media (max-width: 768px) {
-    .project-grid {
+    section.project-grid {
+      width: 95%;
       grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
-  @media (max-width: 900px) {
-    .project-grid {
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
-
-aside.project-image {
-  background-color: #EBEBEB;
-  height: 350px;
-  margin: 0; }
-  @media (max-width: 425px) {
-    aside.project-image {
-      height: 220px; } }
-
-.project-box {
-  align-self: start;
-  margin: 2em; }
-
-article.project-info {
-  max-width: 580px;
-  margin: 1.5em 0 0 0;
-  line-height: 22px; }
-
-#milya-background {
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#swish-background {
-  background-image: url("/img/swish-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#creditsuisse-background {
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#movingposters-background {
-  background-image: url("/img/movingposter-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#illustrations-background {
-  background-image: url("/img/illustration-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-article.casestudy-header {
-  display: grid;
-  grid-template-columns: 3fr 4fr;
-  grid-gap: 50px;
-  grid-template-areas: "casestudy_title casestudy_description"; }
-  @media (max-width: 425px) {
-    article.casestudy-header {
-      grid-gap: 5px;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 4fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-  @media (max-width: 768px) {
-    article.casestudy-header {
-      grid-gap: 5px;
-      grid-template-columns: 1fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-  @media (max-width: 900px) {
-    article.casestudy-header {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 4fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-
-aside.casestudy-title {
-  grid-area: casestudy_title; }
-
-aside.casestudy-description {
-  grid-area: casestudy_description; }
+      grid-template-rows: repeat(4, 500px); } }
+  section.project-grid .project-swish {
+    background-color: #232431;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    cursor: pointer; }
+  section.project-grid .project-milya {
+    background-color: #422FFA;
+    grid-column: 1/2;
+    grid-row: 2/4;
+    cursor: pointer; }
+  section.project-grid .project-illustration {
+    background-color: #080150;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    cursor: pointer; }
+  section.project-grid .project-movingposter {
+    background-color: #EBEBEB;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    cursor: pointer; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -1278,102 +1215,39 @@ article.footer {
     .scroll-to-top-link {
       display: block; } }
 
-.project-grid {
-  margin: 4em 0 4em 0;
-  width: 1400px;
-  max-width: 1400px;
+section.project-grid {
+  margin: 0em 0 2em 0;
+  width: 100%;
+  height: 1600px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-row-gap: 25px;
-  grid-column-gap: 20px; }
-  @media (max-width: 425px) {
-    .project-grid {
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 640px repeat(2, 400px);
+  grid-gap: 25px; }
   @media (max-width: 768px) {
-    .project-grid {
+    section.project-grid {
+      width: 95%;
       grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
-  @media (max-width: 900px) {
-    .project-grid {
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
-
-aside.project-image {
-  background-color: #EBEBEB;
-  height: 350px;
-  margin: 0; }
-  @media (max-width: 425px) {
-    aside.project-image {
-      height: 220px; } }
-
-.project-box {
-  align-self: start;
-  margin: 2em; }
-
-article.project-info {
-  max-width: 580px;
-  margin: 1.5em 0 0 0;
-  line-height: 22px; }
-
-#milya-background {
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#swish-background {
-  background-image: url("/img/swish-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#creditsuisse-background {
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#movingposters-background {
-  background-image: url("/img/movingposter-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#illustrations-background {
-  background-image: url("/img/illustration-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-article.casestudy-header {
-  display: grid;
-  grid-template-columns: 3fr 4fr;
-  grid-gap: 50px;
-  grid-template-areas: "casestudy_title casestudy_description"; }
-  @media (max-width: 425px) {
-    article.casestudy-header {
-      grid-gap: 5px;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 4fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-  @media (max-width: 768px) {
-    article.casestudy-header {
-      grid-gap: 5px;
-      grid-template-columns: 1fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-  @media (max-width: 900px) {
-    article.casestudy-header {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 4fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-
-aside.casestudy-title {
-  grid-area: casestudy_title; }
-
-aside.casestudy-description {
-  grid-area: casestudy_description; }
+      grid-template-rows: repeat(4, 500px); } }
+  section.project-grid .project-swish {
+    background-color: #232431;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    cursor: pointer; }
+  section.project-grid .project-milya {
+    background-color: #422FFA;
+    grid-column: 1/2;
+    grid-row: 2/4;
+    cursor: pointer; }
+  section.project-grid .project-illustration {
+    background-color: #080150;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    cursor: pointer; }
+  section.project-grid .project-movingposter {
+    background-color: #EBEBEB;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    cursor: pointer; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -2231,102 +2105,39 @@ article.footer {
     .scroll-to-top-link {
       display: block; } }
 
-.project-grid {
-  margin: 4em 0 4em 0;
-  width: 1400px;
-  max-width: 1400px;
+section.project-grid {
+  margin: 0em 0 2em 0;
+  width: 100%;
+  height: 1600px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-row-gap: 25px;
-  grid-column-gap: 20px; }
-  @media (max-width: 425px) {
-    .project-grid {
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 640px repeat(2, 400px);
+  grid-gap: 25px; }
   @media (max-width: 768px) {
-    .project-grid {
+    section.project-grid {
+      width: 95%;
       grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
-  @media (max-width: 900px) {
-    .project-grid {
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
-
-aside.project-image {
-  background-color: #EBEBEB;
-  height: 350px;
-  margin: 0; }
-  @media (max-width: 425px) {
-    aside.project-image {
-      height: 220px; } }
-
-.project-box {
-  align-self: start;
-  margin: 2em; }
-
-article.project-info {
-  max-width: 580px;
-  margin: 1.5em 0 0 0;
-  line-height: 22px; }
-
-#milya-background {
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#swish-background {
-  background-image: url("/img/swish-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#creditsuisse-background {
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#movingposters-background {
-  background-image: url("/img/movingposter-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#illustrations-background {
-  background-image: url("/img/illustration-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-article.casestudy-header {
-  display: grid;
-  grid-template-columns: 3fr 4fr;
-  grid-gap: 50px;
-  grid-template-areas: "casestudy_title casestudy_description"; }
-  @media (max-width: 425px) {
-    article.casestudy-header {
-      grid-gap: 5px;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 4fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-  @media (max-width: 768px) {
-    article.casestudy-header {
-      grid-gap: 5px;
-      grid-template-columns: 1fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-  @media (max-width: 900px) {
-    article.casestudy-header {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 4fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-
-aside.casestudy-title {
-  grid-area: casestudy_title; }
-
-aside.casestudy-description {
-  grid-area: casestudy_description; }
+      grid-template-rows: repeat(4, 500px); } }
+  section.project-grid .project-swish {
+    background-color: #232431;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    cursor: pointer; }
+  section.project-grid .project-milya {
+    background-color: #422FFA;
+    grid-column: 1/2;
+    grid-row: 2/4;
+    cursor: pointer; }
+  section.project-grid .project-illustration {
+    background-color: #080150;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    cursor: pointer; }
+  section.project-grid .project-movingposter {
+    background-color: #EBEBEB;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    cursor: pointer; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -3599,102 +3410,39 @@ article.footer {
     .scroll-to-top-link {
       display: block; } }
 
-.project-grid {
-  margin: 4em 0 4em 0;
-  width: 1400px;
-  max-width: 1400px;
+section.project-grid {
+  margin: 0em 0 2em 0;
+  width: 100%;
+  height: 1600px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-row-gap: 25px;
-  grid-column-gap: 20px; }
-  @media (max-width: 425px) {
-    .project-grid {
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 640px repeat(2, 400px);
+  grid-gap: 25px; }
   @media (max-width: 768px) {
-    .project-grid {
+    section.project-grid {
+      width: 95%;
       grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
-  @media (max-width: 900px) {
-    .project-grid {
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
-
-aside.project-image {
-  background-color: #EBEBEB;
-  height: 350px;
-  margin: 0; }
-  @media (max-width: 425px) {
-    aside.project-image {
-      height: 220px; } }
-
-.project-box {
-  align-self: start;
-  margin: 2em; }
-
-article.project-info {
-  max-width: 580px;
-  margin: 1.5em 0 0 0;
-  line-height: 22px; }
-
-#milya-background {
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#swish-background {
-  background-image: url("/img/swish-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#creditsuisse-background {
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#movingposters-background {
-  background-image: url("/img/movingposter-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-#illustrations-background {
-  background-image: url("/img/illustration-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-article.casestudy-header {
-  display: grid;
-  grid-template-columns: 3fr 4fr;
-  grid-gap: 50px;
-  grid-template-areas: "casestudy_title casestudy_description"; }
-  @media (max-width: 425px) {
-    article.casestudy-header {
-      grid-gap: 5px;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 4fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-  @media (max-width: 768px) {
-    article.casestudy-header {
-      grid-gap: 5px;
-      grid-template-columns: 1fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-  @media (max-width: 900px) {
-    article.casestudy-header {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 4fr;
-      grid-template-areas: "casestudy_title" "casestudy_description"; } }
-
-aside.casestudy-title {
-  grid-area: casestudy_title; }
-
-aside.casestudy-description {
-  grid-area: casestudy_description; }
+      grid-template-rows: repeat(4, 500px); } }
+  section.project-grid .project-swish {
+    background-color: #232431;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    cursor: pointer; }
+  section.project-grid .project-milya {
+    background-color: #422FFA;
+    grid-column: 1/2;
+    grid-row: 2/4;
+    cursor: pointer; }
+  section.project-grid .project-illustration {
+    background-color: #080150;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    cursor: pointer; }
+  section.project-grid .project-movingposter {
+    background-color: #EBEBEB;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    cursor: pointer; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
