--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -3,119 +3,44 @@
 @import 'typography';
 @import 'layout';
 
-.project-grid{
-  margin: 4em 0 4em 0;
-  width: 1400px;
-  max-width: 1400px;
-  display:grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-row-gap: 25px;
-  grid-column-gap: 20px;
-  @include for-phone-only{
-    grid-template-columns: 1fr;
-    grid-row-gap: 40px;
-    }
-  @include for-tablet-portait-up{
-    grid-template-columns: 1fr;
-    grid-row-gap: 40px;
-  }
-  @include for-tablet-landscape-up{
-    grid-template-columns: 1fr;
-    grid-row-gap: 40px;
-  }
-}
 
-aside.project-image{
-  background-color: $place-holder;
-  height: 350px;
-  margin: 0;
-  @include for-phone-only{
-    height: 220px;
-    }
+section.project-grid{
+margin: 0em 0 2em 0;
+width:100%;
+height: 1600px;
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: 640px repeat(2, 400px);
+grid-gap: 25px;
+@include for-tablet-portait-up{
+  width: 95%;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 500px);
 }
-.project-box{
-  align-self: start;
-  margin: 2em;
+.project-swish{
+  background-color: $swish-background;
+  grid-column: 1/3;
+  grid-row: 1/2;
+  cursor: pointer;
 }
-article.project-info{
-  max-width: 580px;
-  margin: 1.5em 0 0 0;
-  line-height: 22px;
+.project-milya{
+  background-color: $milya;
+  grid-column: 1/2;
+  grid-row: 2/4;
+  cursor: pointer;
 }
-
-#milya-background{
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+.project-illustration{
+  background-color: $illustration-navy;
+  grid-column: 2/3;
+  grid-row:2/3;
+  cursor: pointer;
 }
-#swish-background{
-  background-image: url("/img/swish-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-#creditsuisse-background{
-  background-image: url("/img/milya-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-#movingposters-background{
-  background-image: url("/img/movingposter-placeholder.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-#illustrations-background{
-  background-image: url("/img/illustration-placeholder.png");
- //@include retinize("/img/illustration-placeholder","png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+.project-movingposter{
+  background-color: $posters;
+  grid-column: 2/3;
+  grid-row: 3/4;
+  cursor: pointer;
 }
 
 
-//--Case Study Layouts--//
-
-article.casestudy-header{
-  //border: 1px solid red;
-  display: grid;
-  grid-template-columns: 3fr 4fr;
-  grid-gap: 50px;
-  //align-items: center;
-  grid-template-areas:
-  "casestudy_title casestudy_description";
-  @include for-phone-only{
-    grid-gap: 5px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 4fr;
-    grid-template-areas:
-    "casestudy_title"
-    "casestudy_description";
-  }
-  @include for-tablet-portait-up{
-    grid-gap: 5px;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-    "casestudy_title"
-    "casestudy_description";
-  }
-  @include for-tablet-landscape-up{
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 4fr;
-    grid-template-areas:
-    "casestudy_title"
-    "casestudy_description";
-  }
-}
-
-aside.casestudy-title{
-//border: 1px solid blue;
-grid-area:casestudy_title;
-}
-aside.casestudy-description{
-//border: 1px solid blue;
-grid-area:casestudy_description;
 }
